--- a/lang/es.json
+++ b/lang/es.json
@@ -8,6 +8,7 @@
     "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a tu dirección de correo electrónico.",
     "Save": "Guardar",
     "Saved.": "Guardado.",
+    "Cancel": "Cancelar",
     "Update Password": "Actualizar contraseña",
     "Ensure your account is using a long, random password to stay secure.": "Asegúrate de que tu cuenta esté utilizando una contraseña larga y aleatoria para mantenerla segura.",
     "Current Password": "Contraseña actual",
